--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@ yum update -y
 yum install -y httpd
 systemctl start httpd
 systemctl enable httpd
-echo "<h1>Hello World from $(hostname -f)</h1>" > /var/www/html/index.html
+echo "<h1>Hello World every now and then from $(hostname -f)</h1>" > /var/www/html/index.html
+
